--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-<div class="valentines-day">
-  <div class="envelope"></div>
-  <div class="heart"></div>
-  <div class="text">AMO</br>OCÊ </br>BEMZIN</div>
-  <div class="front"></div>
-  
-</div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>envelope</title>
+</head>
+
+<link rel="stylesheet" href="style.css">
+
+<body>
+    <div class="valentines-day">
+        <div class="envelope"></div>
+        <div class="heart"></div>
+        <div class="text">AMO</br>OCÊ </br>BEMZIN</div>
+        <div class="front"></div>          
+      </div>
+</body>
+</html>
